--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 <body>
 	<header>This is a header</header>
 	<h1>Hello, World !</h1>
+	<h3>Feature 02</h3>
+	<h3>Feature 02 - B</h3>
 	<footer>This is a footer</footer>
 </body>
 
